--- a/LittleLemon/app/src/main/AndroidManifest.xml
+++ b/LittleLemon/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,7 +15,8 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
+
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/Theme.LittleLemon">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
