--- a/LittleLemon/app/build.gradle
+++ b/LittleLemon/app/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.plugin.serialization'
+    id 'org.jetbrains.kotlin.kapt'
+    id 'kotlin-kapt'
+
 }
 
 android {
@@ -47,8 +51,19 @@ android {
 }
 
 dependencies {
+    implementation("io.ktor:ktor-client-core:2.1.3")
+    implementation("io.ktor:ktor-client-serialization:2.1.3")
+    implementation 'androidx.room:room-ktx:2.4.3'
+
+    kapt "androidx.room:room-compiler:2.4.3"
+    implementation "com.github.bumptech.glide:compose:1.0.0-alpha.1"
+        implementation 'io.ktor:ktor-client-android:2.1.3'
+    implementation "io.ktor:ktor-client-content-negotiation:2.1.3"
+    implementation "io.ktor:ktor-serialization-kotlinx-json:2.1.3"
+    implementation("io.ktor:ktor-serialization:2.1.3")
+
     implementation 'androidx.preference:preference:1.2.0'
-   implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation "androidx.navigation:navigation-compose:2.5.3"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
@@ -62,3 +77,5 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 }
+
+apply plugin: 'kotlin-kapt'
