--- a/LittleLemon/build.gradle
+++ b/LittleLemon/build.gradle
@@ -2,9 +2,19 @@ buildscript {
     ext {
         compose_ui_version = '1.2.0'
     }
+    repositories {
+        // Make sure that you have the following two repositories
+        google()  // Google's Maven repository
+        mavenCentral()  // Maven Central repository
+        maven { url 'https://jitpack.io' }
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+
 plugins {
     id 'com.android.application' version '7.4.1' apply false
     id 'com.android.library' version '7.4.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.0' apply false
+
 }
